--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 <div id="impress">
 
     <div id="title" class="step" data-x="-500" data-y="50">
-        <h1>Intro to Node.js</h1>
-        <h2>Le Zhang - @le_isms</h2>
+        <h1>Hey, 小衍!</h1>
+        <h2>按空格键继续！！！</h2>
+        <img src="img/gates.gif">
     </div>
 
     <div id="agenda" class="step" data-x="500" data-y="50">
